--- a/index.html
+++ b/index.html
@@ -24,5 +24,30 @@
             </div>
         </div>
     </section>
+
+    <!-- grid section  -->
+
+    <section>
+        <div class="grid">
+            <div class="multiple-photo">
+                <div class="image">
+                    <img src="assets/Blog Image.png" alt="">
+                    <button>transfer</button>
+                    <p>Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</p>
+                        <!-- <div class="icon">
+                             <img src="assets/Time Icon.png" alt=""> -->
+                            <!-- <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                            </div>
+                            <p>10h</p>
+                        </div> -->
+                     <!-- --> 
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
