--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
                     <button>transfer</button>
                     <p>Transfer Live: Chlesea in talks 
                         over Kimpenbe transfer</p>
-                        <!-- <div class="icon">
-                             <img src="assets/Time Icon.png" alt=""> -->
-                            <!-- <div class="time-icon">
+                        <div class="icon">
+                            <div class="time-icon">
                                 <i class="fa-regular fa-clock"></i>
+                                <p>  10h</p>
                             </div>
-                            <p>10h</p>
-                        </div> -->
-                     <!-- --> 
+                            <div class="chat-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <p>  23</p>
+                            </div>
+                        </div>
+
+                        
 
                 </div>
             </div>
